# tesla-macos-status-menu-bar-widget

./: .gitignore  Info.plist  README.md  TeslaBar.spec  build.sh  pyproject.toml  requirements.txt  run.sh
resources/: tesla_icon.icns
teslabar/: __init__.py  __main__.py  config.py
teslabar/crypto/: credential_store.py  virtual_key.py
teslabar/services/: oauth_server.py  tesla_api.py
teslabar/ui/: cabin_temp_popup.py  charge_limit_popup.py  main_window.py  main_window_location.py  password_dialog.py  preconditioning_set_schedule_window.py  schedule_window.py  settings_window.py  status_window.py  tray_app.py  tray_app_schedules.py  tray_app_security.py  tray_app_switches.py
teslabar/ui/mainwindow/: main_window.py  main_window_location.py
teslabar/ui/popup/: charging_amps_popup.py
teslabar/ui/schedule/: schedule_window.py
teslabar/ui/tray/: tray_app.py  tray_app_battery_charging.py  tray_app_main.py  tray_app_preheating.py  tray_app_schedules.py  tray_app_security.py  tray_app_switches.py
