[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "teslabar"
version = "1.0.0"
description = "Tesla menu bar app for macOS and Windows"
requires-python = ">=3.13"
dependencies = [
    "PySide6>=6.8",
    "tesla-fleet-api>=1.0.0",
    "cryptography>=44.0",
    "keyring>=25.0",
    "qrcode[pil]>=8.0",
    "aiohttp>=3.11",
]

[project.scripts]
teslabar = "teslabar.__main__:main"

[tool.setuptools.packages.find]
include = ["teslabar*"]
